[gd_scene load_steps=4 format=3 uid="uid://7xqigco1jhpo"]

[ext_resource type="Script" uid="uid://b8rtd2nov0h11" path="res://resources/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://rd05lmvjuf5l" path="res://graphics/background-image-placeholder.png" id="2_wu84c"]
[ext_resource type="Theme" uid="uid://bmi40nndr4ctm" path="res://resources/menu_margin_theme.tres" id="3_8ln24"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wu84c")

[node name="Screen" type="Control" parent="Background"]
layout_mode = 1
anchor_left = 0.221
anchor_top = 0.233
anchor_right = 0.77
anchor_bottom = 0.884
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Background/Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Screen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/Screen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8ln24")

[node name="BackToGame" type="Button" parent="Background/Screen/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "PLAY"

[node name="MarginContainer2" type="MarginContainer" parent="Background/Screen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8ln24")

[node name="SettingsButton" type="Button" parent="Background/Screen/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "SETTINGS"

[node name="MarginContainer3" type="MarginContainer" parent="Background/Screen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8ln24")

[node name="Credits" type="Button" parent="Background/Screen/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3
text = "CREDITS"

[node name="MarginContainer4" type="MarginContainer" parent="Background/Screen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8ln24")

[node name="Quit" type="Button" parent="Background/Screen/VBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT"

[connection signal="pressed" from="Background/Screen/VBoxContainer/MarginContainer/BackToGame" to="." method="_on_back_to_game_pressed"]
[connection signal="pressed" from="Background/Screen/VBoxContainer/MarginContainer2/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Background/Screen/VBoxContainer/MarginContainer3/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Background/Screen/VBoxContainer/MarginContainer4/Quit" to="." method="_on_quit_pressed"]
